# modulo-three

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
modulo_three/: __init__.py  __main__.py  builder.py  machine.py  simple_facade.py
tests/: _machine_assertions.py  conftest.py  test_binary_builder_transitions.py  test_binary_builder_validation.py  test_binary_mod_machine.py  test_builder_base.py  test_cli.py  test_deterministic_machine_spec.py  test_machine_model.py  test_machine_run.py  test_machine_validation.py  test_simple_facade.py  test_table_builder.py
