[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modulo-three"
version = "0.1.0"
description = "Streaming modulo computation via finite-state machine"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.modulo_three.commands]
test = "make test"
docs = "make docs"
